fixed black gap on game

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 .game {
      border: none;
-     width: 720px;
+     width: 700px;
      height: 540px;
 }
 .name {
